@@ -1,0 +1,19 @@
+:10000000F001FF0E7001F004F00530063007FF0923
+:100010007000400004007002F000F002000BB0021B
+:10002000F003FF0D30013002FF0C30000000020031
+:100030000008700330030300B000B0030700FF0F97
+:10004000B0011F0041001F0C43004200430010009C
+:080050000E000F000D000C0072
+:10080000E001FF0E6001E004E00520062007FF097B
+:100810006000400004006002E000E002000BA00263
+:10082000E003FF0D20012002FF0C20000000020069
+:100830000008600320030300A000A0030700FF0FCF
+:10084000A0011F0041001F0C4300420043001000A4
+:080850000E000F000D000C006A
+:10100000E501FF0E6501E504E50525062507FF0955
+:101010006500400004006502E500E502000BA50242
+:10102000E503FF0D25012502FF0C2500000002004D
+:101030000008650325030300A500A5030700FF0FB3
+:10104000A5011F0041001F0C430042004300100097
+:081050000E000F000D000C0062
+:00000001FF
